--- a/roulette.html
+++ b/roulette.html
@@ -564,7 +564,7 @@ window.addEventListener('resize', () => {
 
 
 
-$("svg").attr("xmlns","http //www.w3.org/2000/svg");
+$("svg").attr("xmlns","http://www.w3.org/2000/svg");
 
   
 
