--- a/roulette.html
+++ b/roulette.html
@@ -18,6 +18,7 @@
   height: auto;
   font-family: GeDinar !important;
 
+
 }
 
 body {
@@ -25,6 +26,7 @@ body {
   background-image: linear-gradient(to bottom, #7cceb1, #7948dc );
   background-repeat: no-repeat;
   color: #fff;
+  margin:0;
 }
 
 .mount svg {
